<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/pading"
        android:paddingRight="@dimen/pading"
        android:paddingTop="@dimen/padding_around_content_area"
        android:paddingBottom="@dimen/padding_between_text_and_body_dialog"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="@dimen/row_height"
            android:id="@+id/imb_close_add_user"
            android:src="@drawable/ic_close_black"
            android:scaleType="centerInside"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="@dimen/row_height" />
        <ImageButton
            android:layout_width="@dimen/row_height"
            android:id="@+id/imb_save_add_user"
            android:src="@drawable/ic_check_black"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="@dimen/row_height" />
        <TextView
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/imb_close_add_user"
            android:layout_toLeftOf="@id/imb_save_add_user"
            android:textSize="@dimen/large_text_size"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/new_user_dialog_title"
            android:layout_height="wrap_content" />
    </RelativeLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="wrap_content"
           android:orientation="vertical"
           android:layout_height="match_parent">
           <TextView
               android:layout_width="wrap_content"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:text="@string/user_name"
               android:gravity="center_vertical"
               android:background="?android:attr/selectableItemBackground"
               android:layout_height="@dimen/row_height" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:text="@string/sex"
               android:gravity="center_vertical"
               android:background="?android:attr/selectableItemBackground"
               android:layout_height="@dimen/row_height" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:text="@string/YOB"
               android:gravity="center_vertical"
               android:background="?android:attr/selectableItemBackground"
               android:layout_height="@dimen/row_height" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:text="@string/job"
               android:gravity="center_vertical"
               android:background="?android:attr/selectableItemBackground"
               android:layout_height="@dimen/row_height" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:paddingRight="@dimen/pading"
           android:layout_height="match_parent">
           <EditText
               android:layout_width="match_parent"
               android:layout_margin="@dimen/pading"
               android:background="?android:attr/selectableItemBackground"
               android:id="@+id/edt_username"
               android:textColor="@android:color/black"
               android:textColorHint="@android:color/darker_gray"
               android:paddingLeft="@dimen/pading"
               android:textSize="@dimen/normal_text_size"
               android:hint="@string/enter_name_hint"
               android:layout_height="@dimen/row_height">
               <requestFocus/>
           </EditText>

           <RadioGroup
               android:layout_width="match_parent"
               android:id="@+id/rg_sex"
               android:orientation="horizontal"
               android:layout_margin="@dimen/pading"
               android:layout_height="@dimen/row_height">
               <RadioButton
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:id="@+id/rb_male"
                   android:textColor="@android:color/black"
                   android:textSize="@dimen/normal_text_size"
                   android:text="@string/male"
                   android:layout_height="match_parent" />
               <RadioButton
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:id="@+id/rb_female"
                   android:textColor="@android:color/black"
                   android:textSize="@dimen/normal_text_size"
                   android:text="@string/female"
                   android:layout_height="match_parent" />
           </RadioGroup>
           <EditText
               android:layout_width="match_parent"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:textColorHint="@android:color/darker_gray"
               android:background="?android:attr/selectableItemBackground"
               android:paddingLeft="@dimen/pading"
               android:hint="@string/YOB_edittext_hint"
               android:id="@+id/edt_year_of_birth"
               android:inputType="number"
               android:layout_height="@dimen/row_height" />
           <EditText
               android:layout_width="match_parent"
               android:layout_margin="@dimen/pading"
               android:textColor="@android:color/black"
               android:textSize="@dimen/normal_text_size"
               android:textColorHint="@android:color/darker_gray"
               android:hint="@string/job_edittext_hint"
               android:background="?android:attr/selectableItemBackground"
               android:paddingLeft="@dimen/pading"
               android:id="@+id/edt_job"
               android:layout_height="@dimen/row_height" />
       </LinearLayout>
   </LinearLayout>

</LinearLayout>