<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.uet.humanactivityrecognition.activities.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/padding_between_text_and_body_dialog"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/black"
                    android:layout_height="@dimen/row_height" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/vehicle"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_vehicle"
                    android:layout_height="@dimen/row_height" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/row_heightx4"
                    android:text="@string/status"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_status"
                    android:layout_height="@dimen/row_height" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_enter_name"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/black"
                    android:layout_height="@dimen/row_height" />
               <RadioGroup
                   android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:id="@+id/rg_vehicle"
                   android:layout_height="@dimen/row_heightx5">
                   <RadioButton
                       android:layout_width="match_parent"
                       android:text="@string/walk"
                       android:id="@+id/rb_walk"
                       android:textColor="@android:color/black"
                       android:textSize="@dimen/normal_text_size"
                       android:background="?android:attr/selectableItemBackground"
                       android:layout_weight="1"
                       android:layout_height="0dp" />

                   <RadioButton
                       android:layout_width="match_parent"
                       android:text="@string/bike"
                       android:layout_weight="1"
                       android:id="@+id/rb_bike"
                       android:textColor="@android:color/black"
                       android:textSize="@dimen/normal_text_size"
                       android:background="?android:attr/selectableItemBackground"
                       android:layout_height="0dp" />

                   <RadioButton
                       android:layout_width="match_parent"
                       android:layout_weight="1"
                       android:text="@string/motobike"
                       android:id="@+id/rb_motobike"
                       android:layout_gravity="top"
                       android:textColor="@android:color/black"
                       android:textSize="@dimen/normal_text_size"
                       android:background="?android:attr/selectableItemBackground"
                       android:layout_height="0dp" />
                   <RadioButton
                       android:layout_width="match_parent"
                       android:layout_weight="1"
                       android:text="@string/car"
                       android:id="@+id/rb_car"
                       android:textColor="@android:color/black"
                       android:textSize="@dimen/normal_text_size"
                       android:background="?android:attr/selectableItemBackground"
                       android:layout_height="0dp" />
                   <RadioButton
                       android:layout_width="match_parent"
                       android:layout_weight="1"
                       android:text="@string/bus"
                       android:id="@+id/rb_bus"
                       android:textColor="@android:color/black"
                       android:textSize="@dimen/normal_text_size"
                       android:background="?android:attr/selectableItemBackground"
                       android:layout_height="0dp" />
               </RadioGroup>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/rg_status"
                    android:layout_height="@dimen/row_height">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/moving"
                        android:id="@+id/rb_moving"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text_size"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_height="match_parent" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/stop"
                        android:id="@+id/rb_stop"
                        android:textColor="@android:color/black"
                        android:background="?android:attr/selectableItemBackground"
                        android:textSize="@dimen/normal_text_size"
                        android:layout_height="match_parent" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/collecting_layout"
            android:id="@+id/layout_bottom_sheet"/>
    </android.support.design.widget.CoordinatorLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/material_design_android_floating_action_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/behavior_peek_height"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#da3c2f"
        fab:menu_colorPressed="#dc4b3f"
        fab:menu_colorRipple="@color/gray_clear"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="@android:color/darker_gray"
        fab:menu_labels_colorPressed="@color/gray_clear"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@android:color/white"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="@color/gray_clear"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_menu_item"
            fab:fab_label="@string/users"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_config_menu_item"
            fab:fab_label="@string/config"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>

